added new feature

--- a/index.html
+++ b/index.html
@@ -83,10 +83,19 @@
   <section id="hero" class="hero d-flex flex-column justify-content-center align-items-center" data-aos="fade" data-aos-delay="1500">
     <div class="container">
       <div class="row justify-content-center">
-        <div class="col-lg-6 text-center">
+        <div class="col-lg-9 text-center">
+          <table>
+          <tr>
+          <td>
+            <img src="./man-talking.gif" style="border-radius:100%;">
+          </td>
+          <td>
           <h2>I'm <span>SV convertor</span> A website I will convert your speech to video</h2>
           <p>If you want to show your story live use me I will make your story more impressive</p>
           <a href="contact.html" class="btn-get-started">Click on me</a>
+        </td>
+        </tr>
+      </table>
         </div>
       </div>
     </div>
