--- a/about.html
+++ b/about.html
@@ -53,16 +53,7 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html" class="active">About</a></li>
-          <li class="dropdown"><a href="#"><span>Gallery</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li><a href="gallery.html">Nature</a></li>
-              <li><a href="gallery.html">People</a></li>
-              <li><a href="gallery.html">Architecture</a></li>
-              <li><a href="gallery.html">Animals</a></li>
-              <li><a href="gallery.html">Sports</a></li>
-              <li><a href="gallery.html">Travel</a></li>
-            </ul>
-          </li>
+          
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Feedback</a></li>
         </ul>
@@ -88,7 +79,6 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-6 text-center">
             <h2>About</h2>
-            <p>We are building web_app which convert any speech into a meaningful story in a form of video</p>
 
             <!-- <a class="cta-btn" href="contact.html">Feedback</a> -->
 
@@ -103,13 +93,14 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="./FUTUREX.png" class="img-fluid" alt="" height="900px" width="900px">
           </div>
           <div class="col-lg-5 content">
             <h2>SV Converter</h2>
-            <p class="fst-italic py-3">
-              We are using a concept of DALL.E.2 to generate image from texts, text input comes in a form of voice using concept of mechine learning, tools used combine all images to provide a meaningful video story. In this we will we using OpenCV Python. 
-            </p>
+            <p class="py-3">
+              We are building a system that will convert your story into video format.
+              For example, suppose you're telling a friend about an incident. 
+              What if I told you that you can see the entire incident on a real-time video?</p>
             <!-- <div class="row">
               <div class="col-lg-6">
                 <ul>
@@ -129,13 +120,9 @@
               </div>
             </div> -->
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
-            <p class="m-0">
-              Recusandae est praesentium consequatur eos voluptatem. Vitae dolores aliquam itaque odio nihil. Neque ut neque ut quae voluptas. Maxime corporis aut ut ipsum consequatur. Repudiandae sunt sequi minus qui et. Doloribus molestiae officiis.
-              Soluta eligendi fugiat omnis enim. Numquam alias sint possimus eveniet ad. Ratione in earum eum magni totam.
-            </p>
+              It is a machine learning project that uses natural language processing concepts to process our input data and then uses the DALL.E.2 concept to generate images from pre-processed texts.
+              The images are then combined using Python's opencv library to create a video story.</p>
+            
           </div>
         </div>
 
