--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <td>
           <h2>A website that will convert your story to real time animated video.</h2>
           <p>If you want to show your story live.</p>
-          <a href="services.html" class="btn-get-started">USE ME</a>
+          <a href="https://www.youtube.com/watch?v=EhfVVP8pAFg"  target="_blank" class="btn-get-started">USE ME</a>
         </td>
         </tr>
       </table>
@@ -94,7 +94,106 @@
 
   <main id="main" data-aos="fade" data-aos-delay="1500">
 
-   
+   <!-- ======= Testimonials Section ======= -->
+   <section id="testimonials" class="testimonials">
+    <div class="container">
+
+      <div class="section-header">
+        <h2>TeamMates</h2>
+        <!-- <p></p> -->
+      </div>
+      <div class="slides-3 swiper">
+        <div class="swiper-wrapper">
+
+          <!-- <div class="swiper-slide">
+            <div class="testimonial-item">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+              </p>
+              <div class="profile mt-auto">
+                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+                <h3>Saul Goodman</h3>
+                <h4>Ceo &amp; Founder</h4>
+              </div>
+            </div>
+          </div> -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                Campus Ambassador at Coding Minutes  | Scaler Content Editor | BV '24'
+
+              </p>
+              <div class="profile mt-auto">
+                <img src="assets/img/testimonials/smriti.jpg" class="testimonial-img" alt="">
+                <h3>Smriti Rani</h3>
+                <h4> B.Tech CSE Student</h4>
+              </div>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                Upcoming SDE intern'23 @JPMC | JPMC Code for Good'22 | GSSoC'22 @Mentor @ Scaler Content Editor | Beta Microsoft Student's Learn Ambassador | Web Developer | Educator | BV '24'
+              </p>
+              <div class="profile mt-auto">
+                <img src="assets/img/testimonials/mansi.jpg" class="testimonial-img" alt="">
+                <h3>Mansi Garg</h3>
+                <h4>B.Tech CSE Student</h4>
+              </div>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                Content Editor @Scaler || Campus Captain @Coding Minutes || Backend Developer - Django || B.Tech CSE from Banasthali Vidyapith "24
+              </p>
+              <div class="profile mt-auto">
+                <img src="assets/img/testimonials/stuti.jpg" class="testimonial-img" alt="">
+                <h3>Stuti Kumari</h3>
+                <h4>B.Tech CSE Student</h4>
+              </div>
+            </div>
+          </div><!-- End testimonial item -->
+
+          <div class="swiper-slide">
+            <div class="testimonial-item">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+              </div>
+              <p>
+                Microsoft Engage'22||@ Scaler Content Editor||@ Coding Minutes Campus Captain || BV '24'
+              </p>
+              <div class="profile mt-auto">
+                <img src="assets/img/testimonials/manya.jpg" class="testimonial-img" alt="">
+                <h3>Manya Kumari</h3>
+                <h4>B.Tech CSE Student</h4>
+              </div>
+            </div>
+          </div><!-- End testimonial item -->
+
+        </div>
+        <div class="swiper-pagination"></div>
+      </div>
+
+    </div>
+  </section><!-- End Testimonials Section -->
+
+</main><!-- End #main -->
 
   </main><!-- End #main -->
 
